--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,6 +1,21 @@
-# OpenNebula credentials template
-# Replace with your actual OpenNebula credentials
+# This file can be used to set environment variables for the devcontainer
+# Variables defined here are available inside the container during development
+
+# OpenNebula CLI Tools Version Override
+# If set, this will override the automatic server version detection
+# Use format: "~> 6.10.0" or "6.10.0" for specific versions
+# Leave blank or comment out to enable automatic detection
+# OPENNEBULA_CLI_VERSION_OVERRIDE=""
+
+# Example overrides:
+# OPENNEBULA_CLI_VERSION_OVERRIDE="~> 6.10.0"  # Install 6.10.x compatible version
+# OPENNEBULA_CLI_VERSION_OVERRIDE="6.8.0"     # Install exact 6.8.0 version
+# OPENNEBULA_CLI_VERSION_OVERRIDE="~> 7.0.0"  # Install latest 7.x version
+
+# OpenNebula credentials (legacy format - not currently used by devcontainer)
+# The devcontainer uses ONE_USERNAME and ONE_PASSWORD from host environment instead
 OPENNEBULA_USER_PASS="username:password"
 
 # Optional: Ansible vault password for encrypted files
+# The devcontainer uses ANSIBLE_VAULT_PASSWORD from host environment instead
 # ANSIBLE_VAULT_PASSWORD="your-vault-password" 
